# TOPY_lab1_var3

./: .gitignore  Cargo.toml  README.md  TODO.md  index.html
docs/: architecture.md  sd.md  user-guide.md
src/: app.rs  logic.rs  main.rs  models.rs  settings.rs  utils.rs
src/app/: export.rs  mod.rs  ui.rs
src/tabs/: mod.rs
src/tabs/lab1/: export.rs  logic.rs  mod.rs  ui.rs
src/tabs/lab2/: export.rs  logic.rs  mod.rs  models.rs  ui.rs
