# Cargo.toml
[package]
name = "hooke_jeeves_optimizer"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.24"
egui = "0.24"
plotters = { version = "0.3", features = ["full_palette", "ttf"] }
nalgebra = "0.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3